// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calc > case 0 1`] = `
":root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.w-1 {
  width: calc(var(--spacing) * 1);
}"
`;

exports[`calc > case 0 2`] = `
"page,:host {
  --spacing: .25rem;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.w-1 {
  width: 0.25rem;
  width: calc(var(--spacing)*1);
}"
`;

exports[`calc > case 1 1`] = `
"page,:host {
  --spacing: .25rem;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.w-1 {
  width: 0.25rem;
  width: calc(var(--spacing)*1);
}"
`;

exports[`calc > case 2 1`] = `
"page,:host {
  --spacing: .25rem;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.w-1 {
  width: 0.25rem;
  width: calc(var(--spacing)*1);
}"
`;

exports[`calc > case 3 1`] = `
"page,:host {
  --spacing: 8rpx;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.w-1 {
  width: 0.25rem;
  width: calc(var(--spacing)*1);
}"
`;
